@@ -25,8 +25,8 @@ capplets/common/capplet-util.c
 capplets/common/file-transfer-dialog.c
 capplets/common/gconf-property-editor.c
 capplets/default-applications/default-applications.desktop.in.in
-capplets/default-applications/gnome-default-applications-properties-structs.c
-capplets/default-applications/gnome-default-applications-properties.c
+capplets/default-applications/gnome-da-capplet.c
+capplets/default-applications/gnome-default-applications.xml.in
 capplets/default-applications/gnome-default-applications-properties.glade
 capplets/display/display-properties.desktop.in.in
 capplets/display/main.c
@@ -86,8 +86,6 @@ gnome-settings-daemon/modmap-dialog.glade
 gnome-settings-daemon/reaper.c
 libbackground/applier.c
 libbackground/preferences.c
-libgswitchit/gswitchit_config.c
-libsounds/sound-view.c
 libwindow-settings/gnome-wm-manager.c
 libwindow-settings/metacity-window-manager.c
 schemas/apps_gnome_settings_daemon_default_editor.schemas.in
