@@ -1,3 +1,7 @@
+2006-01-17  Funda Wang  <fundawang@linux.net.cn>
+
+	* POTFILES.in: Removed obsolete files.
+
 2006-01-15  Adam Weinberger  <adamw@gnome.org>
 
 	* POTFILES.in: Added missing file.
